--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Moramerc Wear Your Spirit."
     />
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/M.png" />
     <!--
